feat: add "get recipe by id" path
